Feature: Endpoint para mensajeria instantanea y cifrada de extremo a extremo
