# privox_server/src/index.js
@@ -11,6 +11,7 @@ import { initSignaling } from "./signaling.js";
 import swaggerUi from "swagger-ui-express";
 import { requestsRouter } from "./routes/requests.js";
 import { presenceRouter } from "./routes/presence.js";
+import { messagesRouter } from "./routes/messages.js";
 import YAML from "yamljs";
 import path from "path";
 
@@ -44,6 +45,7 @@ app.use("/api/ice", iceRouter);        // Para cliente Flutter
 app.use("/api/calls", callsRouter);
 app.use("/api/requests", requestsRouter);
 app.use("/api/presence", presenceRouter);
+app.use("/api/messages", messagesRouter);
 
 // Servidor HTTP + WebRTC signaling
 const server = http.createServer(app);
